index blog image fixed on mobile screens

--- a/scss/index-blog.scss
+++ b/scss/index-blog.scss
@@ -94,10 +94,6 @@
     box-shadow: 0 0;
   }
 
-  .trening-antagonistyczny {
-    background-position-y: -200px;
-  }
-
   .article__box-text {
     width: 300px;
     border-top-right-radius: 0;
